[gd_scene load_steps=4 format=3 uid="uid://mkcoxqia2fyf"]

[ext_resource type="Script" path="res://scripts/smog.gd.gd" id="1_ho213"]
[ext_resource type="Texture2D" uid="uid://gxppvveq0drp" path="res://assets/smog.png" id="1_yt5n3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e6myq"]
radius = 35.0

[node name="Area2D" type="Area2D"]
position = Vector2(289, 165)
script = ExtResource("1_ho213")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_e6myq")

[node name="Smog" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_yt5n3")

[node name="Despawn_timer" type="Timer" parent="."]
wait_time = 25.0

[connection signal="area_shape_exited" from="." to="." method="_on_area_shape_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="timeout" from="Despawn_timer" to="." method="_on_despawn_timer_timeout"]
